# Leggere-scrivere-file-.INI

./: CMakeLists.txt  INI.cpp  INI.h  ListinoCD.ini  NegozioCD.ini  README.md  main.cpp
test/: CMakeLists.txt  testINI.cpp
